--- a/react/my-app/src/styles/index.scss
+++ b/react/my-app/src/styles/index.scss
@@ -1,17 +1,17 @@
 // config
-@import "variables";
+@import 'variables';
 
 //layout
-@import "reboot";
+@import 'reboot';
 
 //mixin
-@import "mixin";
+@import 'mixin';
 
 // animation
-@import "animation";
+@import 'animation';
 // button
 
-// @import "../components/Button/style";
+@import '../components/Button/style';
 
 // // menu
 
